<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <TextView
            android:id="@+id/fragment_shopping_text_view"
            android:layout_width="279dp"
            android:layout_height="23dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/title"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.089"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp"/>

        <EditText
            android:id="@+id/fragment_shopping_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_title"
            android:paddingTop="12dp"
            tools:layout_conversion_absoluteHeight="45dp"
            tools:layout_conversion_absoluteWidth="352dp"
            tools:layout_conversion_absoluteX="0dp"
            tools:layout_conversion_absoluteY="19dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/fragment_shopping_text_view"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"/>

        <EditText
            android:id="@+id/fragment_shopping_store_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:hint="@string/enter_store"
            android:paddingTop="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_shopping_edit_text"
            app:layout_constraintVertical_bias="0.0"
            tools:layout_conversion_absoluteHeight="45dp"
            tools:layout_conversion_absoluteWidth="352dp"
            tools:layout_conversion_absoluteX="0dp"
            tools:layout_conversion_absoluteY="19dp"/>

        <Button
            android:id="@+id/fragment_shopping_save_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_shopping_edit_text"
            app:layout_constraintVertical_bias="0.547"/>

        <Button
            android:id="@+id/fragment_shopping_date_button"
            android:layout_width="130dp"
            android:layout_height="46dp"
            android:text="@string/current_time"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@+id/fragment_shopping_store_edit_text"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.033"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/fragment_shopping_save_button"
            app:layout_constraintVertical_bias="0.16"/>


    </android.support.constraint.ConstraintLayout>

</layout>

